[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.6.1"
axum = { version = "0.8.8", features = ["ws"] }
bevy = { version = "0.18", features = ["dynamic_linking"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []
